--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,49 @@
 :root {
   --card-width: 90px;
   --card-height: 150px;
-  --card-border-width: 1px;
+  --border-width: 1px;
   --card-margin: 5px;
+  --bg-color: green;
 }
 
 body {
-  background-color: green;
+  background-color: var(--bg-color);
   font-family: Tahoma, sans-serif;
   user-select: none;
+}
+
+.top {
+  display: flex;
 }
 
 .stock {
   background-color: darkgreen;
 }
 
+.stock.empty {
+  background-color: var(--bg-color);
+}
+
 .card {
-  border: var(--card-border-width) solid black;
+  border: var(--border-width) solid black;
   border-radius: 5px;
   height: var(--card-height);
   width: var(--card-width);
   margin: var(--card-margin);
+  text-align: right;
+}
+
+.talon .card {
+  display: none;
+}
+
+.talon .card:last-child {
+  display: block;
 }
 
 .foundations {
   display: flex;
-  margin-left: calc(var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin));
+  margin-left: calc(var(--card-width) + 2 * var(--border-width) + 2 * var(--card-margin));
 }
 
 .foundations > .card > span {
@@ -34,36 +52,23 @@ body {
   padding-top: 15px;
 }
 
-.top {
+.tableau {
   display: flex;
 }
 
 .pile {
+  width: calc(var(--card-width) + 2 * var(--border-width));
   margin: var(--card-margin);
 }
 
-.pile[index="1"] {
-  margin-left: calc(var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin));
+.pile .card,
+.talon .card {
+  margin: 0;
 }
 
-.pile[index="2"] {
-  margin-left: calc(2 * (var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin)));
-}
-
-.pile[index="3"] {
-  margin-left: calc(3 * (var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin)));
-}
-
-.pile[index="4"] {
-  margin-left: calc(4 * (var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin)));
-}
-
-.pile[index="5"] {
-  margin-left: calc(5 * (var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin)));
-}
-
-.pile[index="6"] {
-  margin-left: calc(6 * (var(--card-width) + 2 * var(--card-border-width) + 2 * var(--card-margin)));
+.tableau .card > .card,
+.talon .card {
+  margin: calc(-1 * var(--border-width));
 }
 
 .face-up {
@@ -72,6 +77,9 @@ body {
 
 .face-down {
   background-color: darkgreen;
+}
+
+.face-down > div.t {
   text-indent: 100%;
   white-space: nowrap;
   overflow: hidden;
